--- a/Makefile_group_6
+++ b/Makefile_group_6
@@ -1,4 +1,4 @@
-all: sim2d_1_g6_r1_1 sim2d_1_g6_r1_2 sim2d_1_g6_r1_3 sim2d_1_g6_r2_1 sim2d_1_g6_r2_2 sim2d_1_g6_r2_3 sim2d_1_g6_r3_1 sim2d_1_g6_r3_2 sim2d_1_g6_r3_3 sim2d_1_g6_r4_1 sim2d_1_g6_r4_2 sim2d_1_g6_r4_3 sim2d_1_g6_r5_1 sim2d_1_g6_r5_2 sim2d_1_g6_r5_3
+all: sim2d_1_g6_r1_1 sim2d_1_g6_r1_2 sim2d_1_g6_r1_3 sim2d_1_g6_r2_1 sim2d_1_g6_r2_2 sim2d_1_g6_r2_3 sim2d_1_g6_r3_1 sim2d_1_g6_r3_2 sim2d_1_g6_r3_3 sim2d_1_g6_r4_1 sim2d_1_g6_r4_2 sim2d_1_g6_r4_3 sim2d_1_g6_r5_1 sim2d_1_g6_r5_2 sim2d_1_g6_r5_3 sim2d_1_g2_r1_2 sim2d_1_g2_r2_3 sim2d_1_g2_r3_3 sim2d_1_g2_r5_1
 
 sim2d_1_g6_r1_1:
 	bash -c "MATCH_ID=sim2d_1_g6_r1_1 HALF_ID=0 TEAM_B=024 TEAM_Y=005 ./run-docker.sh"
@@ -45,3 +45,15 @@ sim2d_1_g6_r5_2:
 sim2d_1_g6_r5_3:
 	bash -c "MATCH_ID=sim2d_1_g6_r5_3 HALF_ID=0 TEAM_B=047 TEAM_Y=037 ./run-docker.sh"
 	bash -c "MATCH_ID=sim2d_1_g6_r5_3 HALF_ID=1 TEAM_B=037 TEAM_Y=047 TEAM_B_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g6_r5_3 yellow) TEAM_Y_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g6_r5_3 blue) ./run-docker.sh"
+sim2d_1_g2_r1_2:
+	bash -c "MATCH_ID=sim2d_1_g2_r1_2 HALF_ID=0 TEAM_B=046 TEAM_Y=017 ./run-docker.sh"
+	bash -c "MATCH_ID=sim2d_1_g2_r1_2 HALF_ID=1 TEAM_B=017 TEAM_Y=046 TEAM_B_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r1_2 yellow) TEAM_Y_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r1_2 blue) ./run-docker.sh"
+sim2d_1_g2_r2_3:
+	bash -c "MATCH_ID=sim2d_1_g2_r2_3 HALF_ID=0 TEAM_B=015 TEAM_Y=017 ./run-docker.sh"
+	bash -c "MATCH_ID=sim2d_1_g2_r2_3 HALF_ID=1 TEAM_B=017 TEAM_Y=015 TEAM_B_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r2_3 yellow) TEAM_Y_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r2_3 blue) ./run-docker.sh"
+sim2d_1_g2_r3_3:
+	bash -c "MATCH_ID=sim2d_1_g2_r3_3 HALF_ID=0 TEAM_B=017 TEAM_Y=034 ./run-docker.sh"
+	bash -c "MATCH_ID=sim2d_1_g2_r3_3 HALF_ID=1 TEAM_B=034 TEAM_Y=017 TEAM_B_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r3_3 yellow) TEAM_Y_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r3_3 blue) ./run-docker.sh"
+sim2d_1_g2_r5_1:
+	bash -c "MATCH_ID=sim2d_1_g2_r5_1 HALF_ID=0 TEAM_B=017 TEAM_Y=051 ./run-docker.sh"
+	bash -c "MATCH_ID=sim2d_1_g2_r5_1 HALF_ID=1 TEAM_B=051 TEAM_Y=017 TEAM_B_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r5_1 yellow) TEAM_Y_INITIAL_SCORE=$$(./get_score.py ~/webots_video_out/ sim2d_1_g2_r5_1 blue) ./run-docker.sh"
