--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "rcj-soccer-sim-2021-robot-code"]
 	path = rcj-soccer-sim-2021-robot-code
 	url = git@github.com:RoboCupJuniorTC/rcj-soccer-sim-2021-robot-code.git
+[submodule "wait-for"]
+	path = wait-for
+	url = git@github.com:eficode/wait-for.git
